[gd_scene load_steps=9 format=3 uid="uid://c8nunp7ntqbeg"]

[ext_resource type="Script" path="res://turrets/bullet/turret_rifle.gd" id="1_bopt4"]
[ext_resource type="Texture2D" uid="uid://pqa2lrqcf3wn" path="res://turrets/bullet/turret_rifle.png" id="2_c7gd8"]
[ext_resource type="AudioStream" uid="uid://bxlm6rlyruvcl" path="res://weapons/shotgun/shotgun.mp3" id="3_k5ytr"]
[ext_resource type="AudioStream" uid="uid://c0onmt34tyfn7" path="res://weapons/shotgun/shotgun_reload.mp3" id="4_adsfo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x2b6p"]
radius = 522.024

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_coteb"]
bg_color = Color(0.0235294, 0.113725, 0.329412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hskuo"]
bg_color = Color(0.8, 0.224, 0.16, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="CircleShape2D" id="CircleShape2D_mpftl"]
radius = 56.0

[node name="TurretBullet" type="Area2D"]
z_index = 30
collision_layer = 0
collision_mask = 2
script = ExtResource("1_bopt4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9, -72)
texture = ExtResource("2_c7gd8")

[node name="ShootPoint" type="Marker2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(5, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x2b6p")

[node name="sfx_shoot" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_k5ytr")
volume_db = 10.306

[node name="sfx_reload" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_adsfo")

[node name="HealthProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 200
offset_left = -115.0
offset_top = -184.0
offset_right = 114.0
offset_bottom = -162.0
theme_override_styles/background = SubResource("StyleBoxFlat_coteb")
theme_override_styles/fill = SubResource("StyleBoxFlat_hskuo")
value = 100.0
show_percentage = false

[node name="HealthText" type="Label" parent="HealthProgressBar"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HitArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_mpftl")
